MergeSort/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\bntong\Desktop\GitHub\unit8RecursionSortsSearches\MergeSort
-d
C:\Users\bntong\Desktop\GitHub\unit8RecursionSortsSearches\MergeSort\doc
-encoding
US-ASCII
-charset
US-ASCII
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\bntong\Desktop\GitHub\unit8RecursionSortsSearches\MergeSort\BubbleSort.java
<---- end of javadoc command ---->
Loading source file C:\Users\bntong\Desktop\GitHub\unit8RecursionSortsSearches\MergeSort\BubbleSort.java...
C:\Users\bntong\Desktop\GitHub\unit8RecursionSortsSearches\MergeSort\BubbleSort.java:27: error: ')' expected
            if(a[i] < a[i+1] 
                            ^
1 error
